...
    return ListView.builder(
        key: const Key("listview"),
        itemCount: users.length + 2,
        itemBuilder: (BuildContext context, int index) {
          if (index == 0) {
            return Row(children: [
              _buildHeaderFooter("Header Text", const Key("Header"))
            ]);
          }
          index -= 1;
          if (index == users.length) {
            return Row(
              children: [
                _buildHeaderFooter("Footer Text", const Key("Footer"))
              ],
            );
          }
          return UserTile(
              key: Key("user_$index"), user: users.elementAt(index));
        }
...
