...
    super.initState();
  }

  @override
  Widget build(BuildContext context) {
    Widget profile = CustomScrollView(
      key: const Key("scrollview"),
      controller: scrollController,
      slivers: [
        SliverPadding(
            sliver: SliverPersistentHeader(
              pinned: true,
              delegate: _SliverAppBarDelegate(
...
              child: Container(
                width: 50,
                height: 50,
                decoration: const BoxDecoration(
                    color: Colors.blue, shape: BoxShape.circle),
                child: IconButton(
                  key: const Key("iconButton"),
                  icon: const Icon(Icons.add_a_photo),
                  iconSize: 25,
                  onPressed: () {
                    Navigator.of(context).pop();
                  },
                ),
...
